# FYP

./: .gitignore  FYP1.ipynb  README.md  pyproject.toml  requirements.txt
notebooks/: FYP1_Refactored.ipynb
src/fyp/: config.py  main.py
src/fyp/cl/: buffer.py  factory.py  metrics.py  trainer.py
src/fyp/cl/strategies/: base.py  derpp.py  er.py  naive.py
src/fyp/data/: dataset.py  task_manager.py
src/fyp/models/: backbone.py  decoder.py  segmenter.py
src/fyp/training/: metrics.py  trainer_baseline.py
src/fyp/utils/: helpers.py  visualization.py
