[project]
name = "fyp"
version = "0.1.0"
description = "Shipping Container Defect Segmentation using Continual Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "pillow",
    "numpy",
    "matplotlib",
    "tqdm",
    "transformers",
    "huggingface-hub",
    "seaborn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ipykernel",
]
